@@ -24,6 +24,7 @@ VERSION 1.1.6 (??? ?? ??:?? 2004)
 - Added utils/backup_dpkg.sh to backup Debian package information
 - Simplified the utils/ section of the Makefile under "make tar"
 - Now exits with an error if unknown command line flags are found
+- Added a check in parse_cmd_line_opts() for the config file if specified
 
 VERSION 1.1.5 (Jun 20 20:56 2004)
 ------------------------------------------------------------------------------
